# linearcue

./: .env  .gitignore  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: ocr.py  ocr_fast  ocr_fast.swift  ocr_server.py  voice.py
src/: App.css  App.jsx  Login.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/macos/: Info.plist
src-tauri/src/: main.rs
src/lib/: groq.js  supabase.js
